<?xml version="1.0"?>
<package format="2">
  <name>ros_custom_mes</name>
  <version>0.0.1</version>
  <description>ros custom messages module</description>
  <maintainer email="admin@t3caic.com">admin</maintainer>
  <license>LICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_proto</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_proto</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
