add_subdirectory(test)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_stoic DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_loc DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_perc DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_fus DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_pred DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_plan DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_ctl DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_viloc DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_stoic_replay DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_smart_view DESTINATION ./)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/conf/etc_server DESTINATION ./)
